--- a/tasks/btrfs_subvols.yml
+++ b/tasks/btrfs_subvols.yml
@@ -10,7 +10,9 @@
 - name: Create subvol
   become: true
   command: btrfs subvolume create "{{ btrfs_mount_dir }}/{{ item.name }}"
-  when: not subvol_stat.stat.exists
+  when:
+    - not subvol_stat.stat.exists
+    - item.state is not defined or item.state != "absent"
 
 - name: Set permissions for subvol
   become: true
@@ -19,3 +21,9 @@
     owner: "{{ item.owner }}"
     group: "{{ item.group }}"
     mode: "{{ item.mode }}"
+  when: item.state is not defined or item.state != "absent"
+
+- name: Cleanup absent subvol
+  become: true
+  command: btrfs subvolume delete "{{ btrfs_mount_dir }}/{{ item.name }}"
+  when: subvol_stat.stat.exists and item.state is defined and item.state == "absent"
