--- a/tasks/btrfs_subvols.yml
+++ b/tasks/btrfs_subvols.yml
@@ -21,6 +21,7 @@
     owner: "{{ item.owner }}"
     group: "{{ item.group }}"
     mode: "{{ item.mode }}"
+    state: directory
   when: item.state is not defined or item.state != "absent"
 
 - name: Cleanup absent subvol
