--- a/host_vars/nas0.yml
+++ b/host_vars/nas0.yml
@@ -13,7 +13,7 @@ btrfs_subvols:
 nfsserver_exports:
   - share: "{{ btrfs_mount_dir }}/nomad"
     hosts:
-      - name: 192.168.0.0/24
+      - name: 192.168.0.0/24 # TODO: Don't hardcode IPs
         options:
           - rw
           - async
