Better var management

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 ansible_collections
 roles
 files/tls
-# Ignore vault for now. Need to write git hooks.
-vault
 .vscode
 .idea
 .DS_Store
+# TODO: Write git hooks for encrypted files
