--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -27,6 +27,7 @@ tls_nomad_dir: "{{ tls_base_dir }}/nomad"
 # Consul
 consul_version: 1.10.3
 consul_datacenter: dc1
+consul_bind_addr: "{{ ansible_default_ipv4.address }}" # https://github.com/hashicorp/consul/issues/11198
 # See vault/common.yml for consul_encrypt_key
 consul_ca_src_file: "{{ tls_consul_dir }}/ca/consul-agent-ca.pem"
 consul_cert_src_file: "{{ tls_consul_dir }}/{{ inventory_hostname }}/{{ consul_datacenter }}-{{ consul_role }}-consul-0.pem"
@@ -70,7 +71,7 @@ nomad_host_networks:
     cidr_or_interface: "{{ ansible_default_ipv4.interface }}"
     reserved_ports: [22]
   - name: tailscale
-    cidr_or_interface: "{{ ansible_tailscale0.device }}"
+    cidr_or_interface: "{{ ansible_tailscale0.ipv4.address }}/32"
     reserved_ports: [22]
   - name: localhost
     cidr_or_interface: lo
