Adding traefik metrics

--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -60,14 +60,12 @@ nomad_key_src_file: "{{ tls_nomad_dir }}/{{ inventory_hostname }}/{{ nomad_regio
 nomad_consul_ca_src_file: "{{ tls_consul_dir }}/ca/consul-agent-ca.pem"
 nomad_consul_cert_src_file: "{{ tls_consul_dir }}/cli/{{ consul_datacenter }}-cli-consul-0.pem"
 nomad_consul_key_src_file: "{{ tls_consul_dir }}/cli/{{ consul_datacenter }}-cli-consul-0-key.pem"
-
 nomad_host_volumes:
   - name: traefik
     path: /mnt/neo/nomad/traefik
     read_only: false
-
 nomad_host_networks:
-  - name: private
+  - name: default
     cidr_or_interface: "{{ ansible_default_ipv4.interface }}"
     reserved_ports: [22]
   - name: tailscale
@@ -76,6 +74,7 @@ nomad_host_networks:
   - name: localhost
     cidr_or_interface: lo
     reserved_ports: [22]
+nomad_telemetry_enable: true
 
 # NFS
 autofs_maps:
