--- a/testbook.yml
+++ b/testbook.yml
@@ -1,35 +1,8 @@
 ---
 
-#- name: Include vars
-
-
-#- name: Ready nomad cluster
-#  gather_facts: no
-#  hosts: rpi0
-#  pre_tasks:
-#    - debug: msg="{{ [10,11,12] | join(',') }}"
-#  roles:
-#    - blmhemu.general.nomad
-
-#- name: Ready nomad cluster
-#  hosts: nomad_instances
-#  pre_tasks:
-#    - include_tasks: tasks/tls_nomad.yml
-#  roles:
-#    - blmhemu.general.nomad
-
-#- name: Setup consul cluster
-#  hosts: consul_instances
-#  pre_tasks:
-#    - include_tasks: tasks/tls_consul.yml
-#  roles:
-#    - blmhemu.general.consul
-#
-#- name: Setup nomad cluster
-#  hosts: nomad_instances
-#  pre_tasks:
-#    - include_tasks: tasks/tls_nomad.yml
-#  roles:
-#    - blmhemu.general.nomad
-
-# Need to have some roles for NAS
+- name: Ready nomad cluster
+  hosts: nomad_instances
+  pre_tasks:
+    - include_tasks: tasks/tls_nomad.yml
+  roles:
+    - blmhemu.general.nomad
