--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -28,7 +28,7 @@ tls_nomad_dir: "{{ tls_base_dir }}/nomad"
 consul_version: 1.10.3
 consul_datacenter: dc1
 consul_bind_addr: "{{ ansible_default_ipv4.address }}" # https://github.com/hashicorp/consul/issues/11198
-# See vault/common.yml for consul_encrypt_key
+# consul_encrypt_key in vars.vault.yml
 consul_ca_src_file: "{{ tls_consul_dir }}/ca/consul-agent-ca.pem"
 consul_cert_src_file: "{{ tls_consul_dir }}/{{ inventory_hostname }}/{{ consul_datacenter }}-{{ consul_role }}-consul-0.pem"
 consul_key_src_file: "{{ tls_consul_dir }}/{{ inventory_hostname }}/{{ consul_datacenter }}-{{ consul_role }}-consul-0-key.pem"
@@ -64,6 +64,14 @@ nomad_consul_key_src_file: "{{ tls_consul_dir }}/cli/{{ consul_datacenter }}-cli
 nomad_host_volumes:
   - name: traefik
     path: /mnt/neo/nomad/traefik
+    read_only: false
+  - name: nextcloud_db
+    path: /mnt/neo/nomad/nextcloud/db
+    owner: 1000
+    group: 1000
+    read_only: false
+  - name: nextcloud_data
+    path: /mnt/neo/nomad/nextcloud/data
     read_only: false
 nomad_host_networks:
   - name: default
