Brand bew selfhost setup (#2)
* New playbook

* Minor refracs

* Improvements

* Fix tls bug

* Imporvements

* Fix formatting bug

* Almost ready

* Added btrfs task

* Added btrfs task

* Cleanup

* Added owner and group subvol

* Added absent option

* Added nas nfs and autofs

* Added nfs fully. Next nomad jobs

* Fixed nomad tls

* Added my first job

* Better var management

* Better dir vols management

* Fixed issue with file prov

* Refrac

* Deduplicated vars

* Added dnsmasq

* Fixed consul dnsmasq traefik

* Added nomad and consul to traefik

* Work around issue with consul restart

* Added ced

* Adding traefik metrics

* Removed monitoring for now

* minor refrac and added nc job

* Disabled root_squash securely

* Disable traefik vol and test

* Added gc script

* Using traefik alloc dir

* postgres alpine

* Updated scripts

* Updated job

* Updated traefik with eph disk

* Updated nextcloud job

* re-enabled traefik

* Re-enabled traefik volume

* Updated to not change perms of existing dirs

* refrac

* Added heimdall

* Added dns for nextcloud bridge

* Added no cow for db

* Minor chnages

* Changed some keys

* Added samples

* Give more time for heimdall to init

* Renamed check_and_create to safe_create

* Added network wait

* Added network wait

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-roles/ansible_consul
-roles/ansible_nomad
-roles/ansible_docker
-roles/ansible_tailscale
-roles/ansible_disable_ipv6
-tls
-nomad_jobs_old
+ansible_collections
+roles
+files/tls
 .vscode
+.idea
+.DS_Store
+# TODO: Write git hooks for encrypted files
