--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -28,6 +28,8 @@ tls_nomad_dir: "{{ tls_base_dir }}/nomad"
 consul_version: 1.12.2
 consul_datacenter: dc1
 # consul_encrypt_key in vars.vault.yml
+consul_bind_addr: "{{ '{{' }} GetInterfaceIP \\\"tailscale0\\\" {{ '}}' }}"
+consul_retry_join_interface: "ansible_tailscale0"
 consul_ca_src_file: "{{ tls_consul_dir }}/ca/consul-agent-ca.pem"
 consul_cert_src_file: "{{ tls_consul_dir }}/{{ inventory_hostname }}/{{ consul_datacenter }}-{{ consul_role }}-consul-0.pem"
 consul_key_src_file: "{{ tls_consul_dir }}/{{ inventory_hostname }}/{{ consul_datacenter }}-{{ consul_role }}-consul-0-key.pem"
@@ -53,6 +55,9 @@ resolv_config: |
 nomad_version: 1.3.1
 nomad_region: global
 nomad_datacenter: dc1
+nomad_bind_addr: "{{ '{{' }} GetInterfaceIP \\\"tailscale0\\\" {{ '}}' }}"
+nomad_http_addr: "127.0.0.1 {{ '{{' }} GetInterfaceIP \\\"tailscale0\\\" {{ '}}' }} {{ '{{' }} GetInterfaceIP \\\"{{ ansible_default_ipv4.interface }}\\\" {{ '}}' }}"
+nomad_http_adv_addr: "{{ nomad_bind_addr }}"
 nomad_ca_src_file: "{{ tls_nomad_dir }}/ca/nomad-agent-ca.pem"
 nomad_cert_src_file: "{{ tls_nomad_dir }}/{{ inventory_hostname }}/{{ nomad_region }}-{{ 'server' if nomad_role != 'client' else 'client' }}-nomad-0.pem"
 nomad_key_src_file: "{{ tls_nomad_dir }}/{{ inventory_hostname }}/{{ nomad_region }}-{{ 'server' if nomad_role != 'client' else 'client' }}-nomad-0-key.pem"
