--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -23,6 +23,7 @@ cni_version: 1.1.1
 tls_base_dir: files/tls
 tls_consul_dir: "{{ tls_base_dir }}/consul"
 tls_nomad_dir: "{{ tls_base_dir }}/nomad"
+tls_vault_dir: "{{ tls_base_dir }}/vault"
 
 # Consul
 consul_version: 1.12.2
@@ -50,6 +51,12 @@ resolv_config: |
   nameserver 127.0.0.1
   nameserver {{ ansible_docker0.ipv4.address }}
   options trust-ad
+
+# Vault
+vault_region: dc1
+vault_ca_src_file: "{{ tls_vault_dir }}/ca/vault-agent-ca.pem"
+vault_cert_src_file: "{{ tls_vault_dir }}/{{ inventory_hostname }}/{{ vault_region }}-server-vault-0.pem"
+vault_key_src_file: "{{ tls_vault_dir }}/{{ inventory_hostname }}/{{ vault_region }}-server-vault-0-key.pem"
 
 # Nomad
 nomad_version: 1.3.1
