--- a/tasks/btrfs_subvols.yml
+++ b/tasks/btrfs_subvols.yml
@@ -7,22 +7,23 @@
     path: "{{ btrfs_mount_dir }}/{{ item.name }}"
   register: subvol_stat
 
-- name: Create subvol
-  become: true
-  command: btrfs subvolume create "{{ btrfs_mount_dir }}/{{ item.name }}"
+# Create a block
+- block:
+    - name: Create subvol
+      become: true
+      command: btrfs subvolume create "{{ btrfs_mount_dir }}/{{ item.name }}"
+
+    - name: Set permissions for subvol
+      become: true
+      file:
+        path: "{{ btrfs_mount_dir }}/{{ item.name }}"
+        owner: "{{ item.owner }}"
+        group: "{{ item.group }}"
+        mode: "{{ item.mode | default('0644') }}"
+        state: directory
   when:
     - not subvol_stat.stat.exists
     - item.state is not defined or item.state != "absent"
-
-- name: Set permissions for subvol
-  become: true
-  file:
-    path: "{{ btrfs_mount_dir }}/{{ item.name }}"
-    owner: "{{ item.owner }}"
-    group: "{{ item.group }}"
-    mode: "{{ item.mode }}"
-    state: directory
-  when: item.state is not defined or item.state != "absent"
 
 - name: Cleanup absent subvol
   become: true
