Added priviledge mode

--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -70,6 +70,7 @@ nomad_key_src_file: "{{ tls_nomad_dir }}/{{ inventory_hostname }}/{{ nomad_regio
 nomad_consul_ca_src_file: "{{ tls_consul_dir }}/ca/consul-agent-ca.pem"
 nomad_consul_cert_src_file: "{{ tls_consul_dir }}/cli/{{ consul_datacenter }}-cli-consul-0.pem"
 nomad_consul_key_src_file: "{{ tls_consul_dir }}/cli/{{ consul_datacenter }}-cli-consul-0-key.pem"
+nomad_docker_allow_privileged: true
 nomad_host_volumes:
   - name: seaweedfs
     path: /mnt/neo/seaweedfs
